fix: scrollbar width

--- a/src/app/components/header/burger-menu/burger-menu.module.scss
+++ b/src/app/components/header/burger-menu/burger-menu.module.scss
@@ -1,5 +1,6 @@
 .noScroll {
   height: calc(100vh);
+  scrollbar-width: none;
 }
 
 .burgerMenu {
